--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -996,20 +996,35 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		yBins		= tpsTpsAccelToRpmBins,  tpsTo
 		zBins		= tpsTpsAccelTable
 
-		table = tractionEtbTableTbl,  tractionEtb,  "Traction Control ETB drop",	1
-		xBins		= tractionControlSpeedBins,  vehicleSpeedKph
-		yBins		= tractionControlSlipBins,  wheelSlipRatio
-		zBins		= tractionControlEtbDrop
+		table = tractionEtbLeftRightTableTbl,  tractionEtbLeftRight,  "Traction Control Left/Right ETB drop",	1
+		xBins		= tractionControlSpeedBins,  tracSpeedLeftRightREF
+		yBins		= tractionControlSlipBins,  wheelSlipRatioLeftRightREF
+		zBins		= tractionControlEtbDropLeftRight
 
-		table = tractionTimingTableTbl,  tractionEtb,  "Traction Control Timing drop",	1
-		xBins		= tractionControlSpeedBins,  vehicleSpeedKph
-		yBins		= tractionControlSlipBins,  wheelSlipRatio
-		zBins		= tractionControlTimingDrop
+		table = tractionTimingLeftRightTableTbl,  tractionTimingDropLeftRight,  "Traction Control Left/Right Timing drop",	1
+		xBins		= tractionControlSpeedBins,  tracSpeedLeftRightREF
+		yBins		= tractionControlSlipBins,  wheelSlipRatioLeftRightREF
+		zBins		= tractionControlTimingDropLeftRight
 
-		table = tractionIgnitionSkipTableTbl,  tractionEtb,  "Traction Control Skip Ignition",	1
-		xBins		= tractionControlSpeedBins,  vehicleSpeedKph
-		yBins		= tractionControlSlipBins,  wheelSlipRatio
-		zBins		= tractionControlIgnitionSkip
+		table = tractionIgnitionSkipLeftRightTableTbl,  tractionIgnitionSkipLeftRight,  "Traction Control Left/Right Skip Ignition",	1
+		xBins		= tractionControlSpeedBins,  tracSpeedLeftRightREF
+		yBins		= tractionControlSlipBins,  wheelSlipRatioLeftRightREF
+		zBins		= tractionControlIgnitionSkipLeftRight
+
+		table = tractionEtbFrontRearTableTbl,  tractionEtbFrontRear,  "Traction Control Front/Rear ETB drop",	1
+		xBins		= tractionControlSpeedBins,  tracSpeedFrontRearREF
+		yBins		= tractionControlSlipBins,  wheelSlipRatioFrontRear
+		zBins		= tractionControlEtbDropFrontRear
+
+		table = tractionTimingFrontRearTableTbl,  tractionTimingDropFrontRear,  "Traction Control Front/Rear Timing drop",	1
+		xBins		= tractionControlSpeedBins,  tracSpeedFrontRearREF
+		yBins		= tractionControlSlipBins,  wheelSlipRatioFrontRear
+		zBins		= tractionControlTimingDropFrontRear
+
+		table = tractionIgnitionSkipFrontRearTableTbl,  tractionIgnitionSkipFrontRear,  "Traction Control Front/Rear Skip Ignition",	1
+		xBins		= tractionControlSpeedBins,  tracSpeedFrontRearREF
+		yBins		= tractionControlSlipBins,  wheelSlipRatioFrontRear
+		zBins		= tractionControlIgnitionSkipFrontRear
 
 	table = boostTableTbl,  boostMapOpen,  "Boost control duty cycle (open loop)",	1
 		xyLabels	= "RPMValue", {bitStringValue(pwmAxisLabels, boostOpenLoopYAxis)}
@@ -1683,7 +1698,19 @@ gaugeCategory = Sensors - Basic
 
 gaugeCategory = Sensors - Extra 1
 	VSSGauge			= vehicleSpeedKph,		@@GAUGE_NAME_VVS@@,			"kmh",		0,	200,		0,		5,		110,	130,	1,	1
+	VSSGaugeFL			= vehicleSpeedKph1,		"WheelSpeed FL",			"kmh",		0,	200,		0,		5,		110,	130,	1,	1
+	VSSGaugeFR			= vehicleSpeedKph2,		"WheelSpeed FR",			"kmh",		0,	200,		0,		5,		110,	130,	1,	1
+	VSSGaugeRL			= vehicleSpeedKph3,		"WheelSpeed RL",			"kmh",		0,	200,		0,		5,		110,	130,	1,	1
+	VSSGaugeRR			= vehicleSpeedKph4,		"WheelSpeed RR",			"kmh",		0,	200,		0,		5,		110,	130,	1,	1
+
+	VSSGaugeFrontAverage			= vehicleSpeedKphFrontAvg,		"WheelSpeed Front Avg",			"kmh",		0,	200,		0,		5,		110,	130,	1,	1
+	VSSGaugeReadAverage			= vehicleSpeedKphRearAvg,		"WheelSpeed Rear Avg",			"kmh",		0,	200,		0,		5,		110,	130,	1,	1
+
 	wheelSlipRatioGauge			= wheelSlipRatio,		"Wheel Slip Ratio",			"",		0,	200,		0,		1,		3,	4,	3,	3
+	wheelSlipRatioGaugeLeftRightFRONT			= wheelSlipRatioLeftRightFRONT,		"Wheel Slip Ratio Left/Right FRONT",			"",		0,	200,		0,		1,		3,	4,	3,	3
+	wheelSlipRatioGaugeLeftRightREAR			= wheelSlipRatioLeftRightREAR,		"Wheel Slip Ratio Left/Right REAR",			"",		0,	200,		0,		1,		3,	4,	3,	3
+	wheelSlipRatioGaugeFrontRear			= wheelSlipRatioFrontRear,		"Wheel Slip Ratio Front/Rear",			"",		0,	200,		0,		1,		3,	4,	3,	3
+
 	turboSpeedGauge	= turboSpeed,			@@GAUGE_NAME_TURBO_SPEED@@, "hz",			0,	200,		0,		1,		3,	4,	1,	1
 	baroPressureGauge	= baroPressure,			@@GAUGE_NAME_BARO_PRESSURE@@,		"kPa",		0,	130,		40,		50,		110,	120,	2,	0
 	internalMcuTemperatureGauge = internalMcuTemperature, @@GAUGE_NAME_ECU_TEMPERATURE@@, "C",	0,	100,	0,	0,	75,  100,	0,	0
@@ -1710,6 +1737,8 @@ gaugeCategory = Sensors - Extra 2
 	wastegatePosGauge = wastegatePositionSensor, @@GAUGE_NAME_WG_POSITION@@,  "%",		0,	100,		0,		0,	100,	100,	1,	1
 	auxSpeed1Gauge = auxSpeed1, "Aux Freq Input1", "hz", 0, 30000, 0, 0, 30000, 30000, 0, 0
 	auxSpeed2Gauge = auxSpeed2, "Aux Freq Input2", "hz", 0, 30000, 0, 0, 30000, 30000, 0, 0
+	auxSpeed3Gauge = auxSpeed3, "Aux Freq Input2", "hz", 0, 30000, 0, 0, 30000, 30000, 0, 0
+	auxSpeed4Gauge = auxSpeed4, "Aux Freq Input2", "hz", 0, 30000, 0, 0, 30000, 30000, 0, 0
   throttleInletPressureGauge		= throttleInletPressure,					"throttleInletPressure",		"kPa",		0,	300,		10,	10,	200,	200,	0,	0
 
 gaugeCategory = Sensors - EGT
@@ -2270,6 +2299,17 @@ menuDialog = main
 		groupChildMenu = scriptCurve5Settings,				"Script Curve #5"
 		groupChildMenu = scriptCurve6Settings,				"Script Curve #6"
 
+  		groupMenu = "Traction Control"
+		groupChildMenu = tractionControlInputs, "Wheel speed inputs"
+		groupChildMenu = tractionEtbDialog, "Traction Control ETB"
+		groupChildMenu = tractionTimingDialog, "Traction Control Timing Retard"
+		groupChildMenu = tractionIgnitionSkipDialog, "Traction Control Spark Skip"
+
+
+		subMenu = dynoChars,				"Virtual Engine Dyno"
+		subMenu = features, "Menu Features"
+
+
 		subMenu = std_separator@@if_ts_show_tcu
 		subMenu = tcuControls,			"Transmission Settings (alpha)"@@if_ts_show_tcu
 		subMenu = gearControls,			"Gear Selection Settings (alpha)"@@if_ts_show_tcu
@@ -2346,7 +2386,8 @@ menuDialog = main
 		groupMenu = "Aux sensors"
 		groupChildMenu = auxTempSensor1Sensor,		@@MENU_NAME_AUX_TEMP1@@, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
 		groupChildMenu = auxTempSensor2Sensor,		@@MENU_NAME_AUX_TEMP2@@, { 1 }, { uiMode == @@UiMode_FULL@@ || uiMode == @@UiMode_INSTALLATION@@ }
-		groupChildMenu = auxLinearSensors,			"Aux Sensors"@@if_ts_show_aux_sensors
+		groupChildMenu = auxLinearSensors,			"Aux Linear Sensors"@@if_ts_show_aux_sensors
+		groupChildMenu = auxSpeedSensors,           "Aux Shaft Speed Sensors"
 
 	menu = "CAN-bus"@@if_ts_show_top_level_can_menu
 		subMenu = canBusMain,				"CAN Bus Settings"@@if_ts_show_top_level_can_menu
@@ -3342,9 +3383,21 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = idleValvePosConfig, West
 		panel = idleValvePosGauges, East
 
-  dialog = tractionIgnitionSkipDialog, "Traction Ignition Skip"
-    field = useHardSkipInTraction,  useHardSkipInTraction
-    panel = tractionIgnitionSkipTableTbl
+	dialog = tractionEtbDialog, "Traction Control ETB"
+		panel = tractionEtbLeftRightTableTbl
+		panel = tractionEtbFrontRearTableTbl
+
+	dialog = tractionTimingDialog, "Traction Control Timing Retard"
+		panel = tractionTimingLeftRightTableTbl
+		panel = tractionTimingFrontRearTableTbl
+
+	dialog = tractionIgnitionSkipDialog, "Traction Control Spark Skip"
+		field = useHardSkipInTraction,  useHardSkipInTraction
+		panel = tractionIgnitionSkipLeftRightTableTbl
+		panel = tractionIgnitionSkipFrontRearTableTbl
+
+
+
 
 	dialog = mc33Dialog, "Low-Z smart injector control"
 	  field = externalRusEfiGdiModule,    externalRusEfiGdiModule@@if_ts_show_gdi_low_level
@@ -3493,6 +3546,8 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		field = "Injection Output 12 ",					injectionPins12
 		field = auxSpeedSensorInputPin1,					auxSpeedSensorInputPin1
 		field = auxSpeedSensorInputPin2,					auxSpeedSensorInputPin2
+		field = auxSpeedSensorInputPin3,					auxSpeedSensorInputPin3
+		field = auxSpeedSensorInputPin4,					auxSpeedSensorInputPin4
 
 
 	dialog = allPins2_2
@@ -3749,10 +3804,69 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 	dialog = auxLinearSensors
 		panel = auxLinearSensor1
 		panel = auxLinearSensor2
-		field = "Aux Speed Input 1",					auxSpeedSensorInputPin1
-		field = "Aux Speed Input 2",					auxSpeedSensorInputPin2
+		panel = auxLinearSensor3
+		panel = auxLinearSensor4
+
+	dialog = tractionControlInputs
+		field  = "Drivetrain layout",           drive_train_layout
+		field = "Wheel speed inputs for traction control"
+
+		field = "Wheel Speed Input 1 (FL)",					wheelSpeedSensorInputPin1
+		field = "Wheel Speed Input 2 (FR)",					wheelSpeedSensorInputPin2
+		field = "Wheel Speed Input 3 (RL)",					wheelSpeedSensorInputPin3
+		field = "Wheel Speed Input 4 (RR)",					wheelSpeedSensorInputPin4
+
+		field = "Speed sensor tooth count (FL)",	vssToothCount1
+		field = "Speed sensor tooth count (FR)",	vssToothCount2
+		field = "Speed sensor tooth count (RL)",	vssToothCount3
+		field = "Speed sensor tooth count (RR)",	vssToothCount4
+
+		field = "Wheel revolutions per kilometer (FL)",	driveWheelRevPerKm1
+		field = "Wheel revolutions per kilometer (FR)",	driveWheelRevPerKm2
+		field = "Wheel revolutions per kilometer (RL)",	driveWheelRevPerKm3
+		field = "Wheel revolutions per kilometer (RR)",	driveWheelRevPerKm4
+
+		field = "Speed sensor gear ratio (FL)",	vssGearRatio1
+		field = "Speed sensor gear ratio (FR)",	vssGearRatio2
+		field = "Speed sensor gear ratio (RL)",	vssGearRatio3
+		field = "Speed sensor gear ratio (RR)",	vssGearRatio4
+
+ 		field = "Filter parameter1 FL",		vssFilterReciprocal1
+ 		field = "Filter parameter2 FR",		vssFilterReciprocal2
+ 		field = "Filter parameter3 RL",		vssFilterReciprocal3
+ 		field = "Filter parameter4 RR",		vssFilterReciprocal4
+
+		field = "Use biquad on WheelSpeedFL",				useBiQuadOnWheelSpeedSensors1
+		field = "Use biquad on WheelSpeedFR",				useBiQuadOnWheelSpeedSensors2
+		field = "Use biquad on WheelSpeedRL",				useBiQuadOnWheelSpeedSensors3
+		field = "Use biquad on WheelSpeedRR",				useBiQuadOnWheelSpeedSensors4
+
 		field = "Use Aux Speed Sensors for slip ratio",	useAuxSpeedForSlipRatio
 		field = "Use VSS As Second Wheel Speed",		useVssAsSecondWheelSpeed
+
+
+	dialog = auxSpeedSensors
+		Field = "Aux Speed inputs - AUX"
+		field = "Aux Speed Input 1 (aux)",					auxSpeedSensorInputPin1
+		field = "Aux Speed Input 2 (aux)",					auxSpeedSensorInputPin2
+		field = "Aux Speed Input 3 (aux)",					auxSpeedSensorInputPin3
+		field = "Aux Speed Input 4 (aux)",					auxSpeedSensorInputPin4
+
+		field = "aux speed sensor frequency filter1",							auxFrequencyFilter1
+		field = "aux speed sensor frequency filter2",							auxFrequencyFilter2
+		field = "aux speed sensor frequency filter3",							auxFrequencyFilter3
+		field = "aux speed sensor frequency filter4",							auxFrequencyFilter4
+
+		field = auxSpeedMult5, auxSpeedMult1
+		field = auxSpeedMult6, auxSpeedMult2
+		field = auxSpeedMult7, auxSpeedMult3
+		field = auxSpeedMult8, auxSpeedMult4
+
+		field = useBiQuadOnAuxSpeedSensors5,				useBiQuadOnAuxSpeedSensors1
+		field = useBiQuadOnAuxSpeedSensors6,				useBiQuadOnAuxSpeedSensors2
+		field = useBiQuadOnAuxSpeedSensors7,				useBiQuadOnAuxSpeedSensors3
+		field = useBiQuadOnAuxSpeedSensors8,				useBiQuadOnAuxSpeedSensors4
+
 
     dialog = sentInputs, "SENT protocol inputs"
 		field = "SENT Input #1",						sentInputPins1
@@ -4449,6 +4563,7 @@ cmd_set_engine_type_default					= "@@TS_IO_TEST_COMMAND_char@@@@ts_command_e_TS_
 		panel = alternatorSettings
 
 	dialog = speedSensorAnalog, "Speed sensor"
+		field = "Source for speed sensor input", trac_vss_source
 		field = "Input",				vehicleSpeedSensorInputPin
 		field = "Filter parameter",		vssFilterReciprocal, { vehicleSpeedSensorInputPin != @@ADC_CHANNEL_NONE@@ }
 
