crankingCycleFuelCoef => crankingCycleBaseFuel see #7847

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1504,7 +1504,7 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		xyLabels	= "Engine Cycles", "Coolant Temp"
 		xBins		= crankingCycleBins, revolutionCounterSinceStart
 		yBins		= crankingCycleFuelCltBins, coolant
-		zBins		= crankingCycleFuelCoef
+		zBins		= crankingCycleBaseFuel
 
 	table = alternatorVoltageTargetTableTbl,  alternatorVoltageTargetTableMap,  "Alternator Voltage Target Table",	1
 		xBins		= alternatorVoltageTargetRpmBins,  RPMValue
