allow extend `Ignition` menu with `board_ignition_advance_menu.ini` board-specific file

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -2129,6 +2129,8 @@ menuDialog = main
 		subMenu = std_separator
 
 		subMenu = ignitionTableTbl,			"Ignition advance", 0, {isIgnitionEnabled}
+    @@BOARD_IGNITION_ADVANCE_MENU_FROM_FILE@@
+
 		subMenu = ignitionCltCorrTable,			"Engine Temp timing correction", 0, {isIgnitionEnabled == 1}
 		subMenu = ignitionIatCorrTableTbl,	"Intake Air Temp timing correction", 0, {isIgnitionEnabled == 1}
 		subMenu = std_separator
