allow override `Ignition advance` and `Ignition Table` literals with board-specific ones

--- a/firmware/tunerstudio/tunerstudio.template.ini
+++ b/firmware/tunerstudio/tunerstudio.template.ini
@@ -1086,7 +1086,7 @@ curve = rangeMatrix, "Range Switch Input Matrix"
 		gridOrient  = 250,	0, 340 ; Space 123 rotation of grid in degrees.
 		upDownLabel = "(RICHER)", "(LEANER)"
 
-	table = ignitionTableTbl,  ignitionTableMap,  "Ignition Table",	1
+	table = ignitionTableTbl,  ignitionTableMap,  @@IGNITION_ADVANCE_TABLE_NAME@@,	1
 		xyLabels = "RPM", "Ignition Load"
 		xBins		= ignitionRpmBins,  RPMValue
 		yBins		= ignitionLoadBins,  ignitionLoad
@@ -2128,7 +2128,7 @@ menuDialog = main
 		subMenu = ignitionSettings,			"Ignition settings"
 		subMenu = std_separator
 
-		subMenu = ignitionTableTbl,			"Ignition advance", 0, {isIgnitionEnabled}
+		subMenu = ignitionTableTbl,			@@IGNITION_ADVANCE_MENU_NAME@@, 0, {isIgnitionEnabled}
     @@BOARD_IGNITION_ADVANCE_MENU_FROM_FILE@@
 
 		subMenu = ignitionCltCorrTable,			"Engine Temp timing correction", 0, {isIgnitionEnabled == 1}
