--- a/firmware/config/boards/hellen/uaefi/board_panels.ini
+++ b/firmware/config/boards/hellen/uaefi/board_panels.ini
@@ -1,3 +1,3 @@
-	dialog = rainTimingAdjustmentDialog
+	dialog = rainEtbAdjustmentDialog
 		field = testPerBoardBit, testPerBoardBit
 		panel = rainTimingAdjustmentTableTbl, South
